.bonus/confs/apps/cd/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server
  namespace: argocd

spec:

  ingressClassName: traefik

  rules:

    - host: argocd.iot.test

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: argocd-server

                port:
                  number: 80
